@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Fix errors on base of CreditCard [josh.bassett]
+#
 # * Update product to use Rubigen instead of stolen Rails generator [cody]
 #
 # * Mimic directory structure of unit tests in remote tests [cody]
